fix(layout): adjust image alignment and spacing in sections

--- a/plateform/assets/app.scss
+++ b/plateform/assets/app.scss
@@ -233,6 +233,7 @@ li { margin-bottom: 8px; }
         margin: 0 auto;
         display: flex;
         gap: 2rem;
+        justify-content: space-between;
 
         h2, h3, h4, h5, h6 {
             margin-top: 0;
@@ -242,6 +243,7 @@ li { margin-bottom: 8px; }
 
 .section-img {
     min-width: 30%;
+    max-width: 30%;
     text-align: center;
 
     img {
